# flask_start

./: .flaskenv  config.py  pyproject.toml
app/: routes.py
app/static/: mapbox-gl-ogc-feature-collection.esm.js  mapbox-gl-ogc-feature-collection.js  mapbox-gl-ogc-feature-collection.min.js  maplibre-gl-dev.js  myScript.js
app/templates/: base.html
