[tool.poetry]
name = "flask-start"
version = "0.1.0"
description = ""
authors = ["Matthias Henning <henning@geomarketing.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
flask-wtf = "^1.2.1"
ruff = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
